test/correct/PMC14.hs
module PMC14 where

main :: Int
main = a "abc"

a :: String -> Int
a "abc" = 4
